--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,21 +1,40 @@
-<div class="container main-container">
+<div class="container main-container align-items-center">
     <h1>Videos de Youtube</h1>
     <hr>
 
     <div class="card-columns" *ngIf="videos.length > 0">
 
         <div class="card" *ngFor="let video of videos" style="width: 18rem;">
-            <img [src]="video.thumbnails.high.url" class="card-img-top" alt="...">
+            <img [src]="video.thumbnails.high.url" class="card-img-top" [alt]="video.title">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+                    <h5 class="card-title"> {{ video.title }}</h5>
+                    <button (click)="verVideo( video )" type="button" data-toggle="modal" data-target="#exampleModalCenter" class="btn btn-outline-primary btn-block">Ver Video</button>
                 </div>
             </div>
         </div>
-    </div>
 
+    </div>
+    <button type="button" (click)="cargarVideos()" class="btn btn-primary btn-block">Cargar mas videos</button>
+</div>
+
+
+<!-- Modal -->
+<div *ngIf="videoSeleccionado" class="modal fade" id="exampleModalCenter" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">{{ videoSeleccionado.title }}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+            </div>
+            <div class="modal-body">
+                <iframe width="100%" height="300" [src]="videoSeleccionado.resourceId.videoId | videoYoutube">  </iframe>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" (click)="cerrarModal()" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
